--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body{background: lightsalmon;}
+
+a{color: darkorchid;}
+
 .App-logo {
  max-width: 200px;
  display: block;
@@ -10,3 +14,8 @@ margin: 30px 0;
 }
 
 .App-container{margin: 20px;}
+
+.App-footer{
+    text-align: center;
+    margin: 30px 0;
+}
