--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ a{color: darkorchid;}
  margin: 0 auto;
 }
 
+.App{padding: 60px 0 100px;
+    max-width: 980px;
+    margin: 0 auto;
+}
 
 .App-header {
 margin: 30px 0;  
